feat: 添加一些方法以及优化部分代码